# Singularity

./: .gitignore  LICENSE  README.md
Guides/: Preserving Open Science Data with Singularity and.md
Utilities/cid-comparison/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
Utilities/retrieval-review/: .gitignore  README.md  config.example.json  pyproject.toml
Utilities/retrieval-review/docs/: SCRIPTS_OVERVIEW.md  create-script-overview-doc.md
Utilities/retrieval-review/docs/examples/: README.md
Utilities/retrieval-review/docs/examples/summary-reports/: RETRIEVAL_SUMMARY_REPORT.md  retrieval_charts.md  summary_report.json
Utilities/retrieval-review/docs/prompts/: 01-generate-summary-report.md  02-update-summary-report.md  03-qa-summary-report-script.md  README.md
Utilities/retrieval-review/docs/spec/retrieval-check-summary.v1/: 01-data-sources.md  02-json-schema.md  03-metric-calculations.md  04-narrative-generation.md  05-output-artifacts.md  06-glossary.md  07-caveats-and-pitfalls.md  README.md
Utilities/retrieval-review/scripts/: __init__.py  analyze_error_patterns.py  check_retrieval_status.py  check_retrieval_status_cid_postprocessing.py  check_retrieval_status_piece_postprocessing.py  config.py  extract_cids_with_status_errors.py  fetch_deals.py  fetch_file_metadata.py  fetch_piece_metadata.py  pieces_without_deals.py  summary_report.py
Utilities/retrieval-review/scripts/summary_report/: __init__.py  aggregations.py  constants.py  error_analysis.py  loaders.py  metrics.py  prepared_content.py  utils.py
(+28 files in other folders)
